@@ -762,7 +762,7 @@ FIELD		|elementid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|elementtype	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|iconid_off	|t_id		|	|NULL		|ZBX_SYNC		|2|images	|imageid	|RESTRICT
 FIELD		|iconid_on	|t_id		|	|NULL		|ZBX_SYNC		|3|images	|imageid	|RESTRICT
-FIELD		|label		|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
+FIELD		|label		|t_varchar(2048)|''	|NOT NULL	|ZBX_SYNC
 FIELD		|label_location	|t_integer	|	|NULL		|ZBX_SYNC
 FIELD		|x		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|y		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
@@ -787,7 +787,7 @@ FIELD		|selementid1	|t_id		|	|NOT NULL	|ZBX_SYNC		|2|sysmaps_elements|selementid
 FIELD		|selementid2	|t_id		|	|NOT NULL	|ZBX_SYNC		|3|sysmaps_elements|selementid
 FIELD		|drawtype	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|color		|t_varchar(6)	|'000000'|NOT NULL	|ZBX_SYNC
-FIELD		|label		|t_varchar(255)|''	|NOT NULL	|ZBX_SYNC
+FIELD		|label		|t_varchar(2048)|''	|NOT NULL	|ZBX_SYNC
 INDEX		|1		|sysmapid
 INDEX		|2		|selementid1
 INDEX		|3		|selementid2
@@ -1308,4 +1308,4 @@ INDEX		|2		|templateid
 TABLE|dbversion||
 FIELD		|mandatory	|t_integer	|'0'	|NOT NULL	|
 FIELD		|optional	|t_integer	|'0'	|NOT NULL	|
-ROW		|2010181	|2010181
+ROW		|2010183	|2010183
