@@ -1,6 +1,7 @@
 Changes for 2.1.9
 
 New features:
+..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)
 
 Bug fixes:
 
